<resources>
    <string name="app_name">Alarm Calculator</string>
    <string name="sleep_at">Sleep at</string>
    <string name="alarm_at">Alarm at</string>
    <string name="sleep_now">Now</string>
    <string name="time_example">12:00</string>
    <string name="sleep_in">Sleep in</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="set_alarm">Set Alarm</string>
</resources>
