<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvMainSleepAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="4dp"
        android:text="@string/sleep_at"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/tvMainSleepTime"
        app:layout_constraintEnd_toStartOf="@id/tvMainSleepTime" />

    <TextView
        android:id="@+id/tvMainSleepTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_example"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMainAlarmAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="4dp"
        android:text="@string/alarm_at"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/tvMainAlarmTime"
        app:layout_constraintEnd_toStartOf="@id/tvMainAlarmTime" />

    <TextView
        android:id="@+id/tvMainAlarmTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/time_example"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMainSleepTime" />

    <Button
        android:id="@+id/btnMainSleepNow"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:paddingHorizontal="6dp"
        android:text="@string/sleep_now"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/tvMainSleepTime"
        app:layout_constraintStart_toEndOf="@id/tvMainSleepTime"
        app:layout_constraintTop_toTopOf="@id/tvMainSleepTime" />

    <RadioGroup
        android:id="@+id/rdGrpMainSleepCycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/tvMainSleepTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rdBtnMainSleepCycle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:ignore="HardcodedText" />

        <RadioButton
            android:id="@+id/rdBtnMainSleepCycle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="2"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:ignore="HardcodedText" />

        <RadioButton
            android:id="@+id/rdBtnMainSleepCycle3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="3"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:ignore="HardcodedText" />

        <RadioButton
            android:id="@+id/rdBtnMainSleepCycle4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="4"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:ignore="HardcodedText" />

        <RadioButton
            android:id="@+id/rdBtnMainSleepCycle5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:checked="true"
            android:text="5"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:ignore="HardcodedText" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
